# vigir_wide_angle_image_proc

./: README  README.md
vigir_ocamlib_tools/: CMakeLists.txt  package.xml
vigir_ocamlib_tools/include/vigir_ocamlib_tools/: math_tools.h  ocamlib_camera_model.h  ocamlib_camera_model_cv1.h  omni_camera.h
vigir_ocamlib_tools/src/: ocamlib_camera_model.cpp  ocamlib_camera_model_cv1.cpp  ocamlib_camera_model_cv1.cpp.autosave  omni_camera.cpp  test.cpp
vigir_wide_angle_image_proc/: CMakeLists.txt  nodelet_plugins.xml  package.xml
vigir_wide_angle_image_proc/calib/: calib_results_l_sa.txt  calib_results_r_sa.txt
vigir_wide_angle_image_proc/cfg/: Rectify.cfg
vigir_wide_angle_image_proc/launch/: sa_camera_nodelets.launch  sa_camera_nodelets_calibration.launch  standalone_sa_camera_nodelets.launch  test_left_sa_camera.launch
vigir_wide_angle_image_proc/src/nodelets/: rectify.cpp
