<?xml version="1.0"?>
<package>
  <name>vigir_ocamlib_tools</name>
  <version>0.0.0</version>
  <description>The vigir_ocamlib_tools package</description>

  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>


  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend> <!-- for FindEigen.cmake module -->
  <build_depend>cv_bridge</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>cv_bridge</run_depend>

  <export>
  </export>
</package>
